map and gps in setting

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,5 @@
     <string name="weather_snow_night">snow (night)</string>
     <string name="weather_mist_day">mist</string>
     <string name="weather_mist_night">mist (night)</string>
+    <string name="SelectMode">Select Mode</string>
 </resources>
